[package]
name = "faaa_queue"
version = "0.1.2"
edition = "2024"
description = "A Rust implementation of the FAAArrayQueue"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WilleBerg/faaa_queue"
homepage = "https://github.com/WilleBerg/faaa_queue"
keywords = ["queue", "concurrent", "thread-safe", "data-structure"]
categories = ["data-structures", "concurrency"]

[dependencies]
crossbeam-utils = "0.8.21"
haphazard = "0.1.8"
