[package]
name = "faaa_queue"
version = "1.0.0"
edition = "2024"
description = "A really fast unbounded lock-free concurrent queue."
license = "MIT OR Apache-2.0"
repository = "https://github.com/WilleBerg/faaa_queue"
homepage = "https://github.com/WilleBerg/faaa_queue"
keywords = ["queue", "concurrent", "thread-safe", "data-structure"]
categories = ["data-structures", "concurrency"]

[dependencies]
crossbeam-utils = "0.8.21"
haphazard = "0.1.8"
